components/cost-management/staging/policies/propogate_namespace_labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-management-labels
  annotations:
    policies.kyverno.io/title: Propagate Cost-Center from Namespace
    policies.kyverno.io/category: Cost Management
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy tries to that:
      (1) Propagate the `cost-center` label from non-managed tenant namespaces to pods.
      (2) Set the `insights_cost_management_optimizations` label is set to `true` on Pods to which the `cost-center` label was propagated.
      If the webhook fails, the pod will be created without the labels.
spec:
  webhookConfiguration:
    failurePolicy: Ignore
  rules:
    - name: propagate-existing-cost-center-from-namespace
      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaceSelector:
              matchLabels:
                konflux-ci.dev/type: tenant
              matchExpressions:
                - key: kubernetes.io/metadata.name
                  operator: NotIn
                  values:
                      - rhtap-releng-tenant
                      - rh-managed-bifrost-tenant
                      - rh-managed-cnv-fbc-tenant
                      - rh-managed-mng-s-2-tenant
                      - rh-managed-red-hat-acm-tenant
                      - rh-managed-rhtap-ser-tenant
                      - rhel-on-gitlab-tenant
                      # managed tenant namespaces
      context:
        - name: costcenterLabel
          apiCall:
            urlPath: "/api/v1/namespaces/{{ request.object.metadata.namespace }}"
            method: GET
            jmesPath: "metadata.labels.\"cost-center\" || '' "
      preconditions:
        all:
          - key: "{{ costcenterLabel }}"
            operator: NotEquals
            value: ""
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              cost-center: "{{ costcenterLabel }}"
              insights_cost_management_optimizations: "true"
