components/cost-management/staging/policies/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($cluster_policy_name)
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
